--- a/src/KnowledgeAuditor.Api/appsettings.json
+++ b/src/KnowledgeAuditor.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "DecisionPolicy": {
+    "ApprovalThreshold": 0.4
+  }
 }
